Delegated ImageController implementation to a service method